--- a/README.mkd
+++ b/README.mkd
@@ -1,12 +1,12 @@
 Introduction
 ============
-This is a Java library that some random algorithms based on the Colt RandomEngine.
+This is a Java library that provides some random-based algorithms based on the Colt RandomEngine.
 
 Downloads
 =========
-The library can be downloaded as a binary or source package from [https://github.com/gemstonetiger/trickl-random/downloads](https://github.com/gemstonetiger/trickl-random/downloads "Distribution download page").
+The library can be downloaded as a binary or source package from [https://github.com/trickl/trickl-random/downloads](https://github.com/trickl/trickl-random/downloads "Distribution download page").
 
-The source can be also retrieved straight from the Git repository: `git clone git@github.com:gemstonetiger/trickl-random.git`.
+The source can be also retrieved straight from the Git repository: `git clone git@github.com:trickl/trickl-random.git`.
 
 Features
 ========
